@@ -2,6 +2,7 @@
 
 Noteworthy changes:
 * Backported API to get peer accepted channel names
+* Backported Stream_CheckAndLogRequiredLength
 
 Fixed issues:
 * Fixed #7837: Prevent out of bound reads for FFMPEG
@@ -13,6 +14,7 @@ Fixed issues:
 * Backported #7895: Mac audin memory leak fixes
 * Backported #7898: Automatic android versioning
 * Backported #7916: GFX 10.7 capability support
+* Backported #7949: Server RDPSND API improvements
 
 # 2022-04-25 Version 2.7.0
 
